--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -43,10 +43,8 @@
                         </li>
                         {% for category in categories %}
                         <li class=" list-group-item">
-                            <a href="{% url 'gallery' %}?category={{category.category_name}}">
-                                {{category.category_name}}
-                                {{category.location_name}}
-                            </a>
+                            <a href="{% url 'gallery' %}?category={{category.name}}">
+                                {{category.name}}
                             </a>
                         </li>
                         {% endfor %}
