--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -29,14 +29,14 @@
 
     <div class="container">
         <div class="row">
-            <!-- <div class="col-md-3">
+            <div class="col-md-3">
                 {% if request.user.is_authenticated %}
                 <p>Hello {{request.user}}</p>
                 {% endif %}
                 <div class="card">
                     <div class="card-header">
                         Categories
-                    </div> -->
+                    </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
                             <a href="{% url 'gallery' %}">All</a>
